tests/ui/editions/edition-imports-2015.stderr
error: cannot glob-import all possible crates
  --> $DIR/auxiliary/edition-imports-2018.rs:16:9
   |
LL | macro_rules! gen_glob { () => {
   | --------------------- in this expansion of `gen_glob!`
LL |     use *;
   |         ^
   |
  ::: $DIR/edition-imports-2015.rs:23:5
   |
LL |     gen_glob!();
   |     ----------- in this macro invocation

error: aborting due to previous error

